--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <div class="tablet_s"><img src="img/server-icon.png" alt="Image 1"></div>
+            <div class="tablet_s"><img src="Img/server-icon.png" alt="Image 1"></div>
             <div class="prostor-10px"> </div>
         <ul class="button_list">
             <button class="button_oak_ip" onclick="copyText(); playClickSound()"><h1>IP - адреса</h1></button>
@@ -24,7 +24,7 @@
             <div class="whide-box">
                 <div class="tablet">
                     <h2>На нашому сервері ми представляємо вам нову колекцію броні, яка змінить ваше геймплей в Minecraft. Захистіть себе та станьте ким хочете з модифікацією <span class="rainbow">Knight Quest</span>!</h2>
-                    <img class="s_imuga" src="img/armor.png" alt="Image 1">
+                    <img class="s_imuga" src="Img/armor.png" alt="Image 1">
                   </div>
               <div class="oak"></div>    
               <div class="gallery">
@@ -38,9 +38,9 @@
                 <div class="tablet">
                     <h2>Хочете знайти зброю яка буде вам во душі? З цим вам допоможуть модифікації <span class="rainbow">Dungeon Gear</span> і <span class="rainbow">Better Combat</span> ! </h2>
                     <div class="img_list">
-                    <img class="s_imuga_i" src="img/dungeons_gear_2.png"> 
+                    <img class="s_imuga_i" src="Img/dungeons_gear_2.png"> 
                     <div class="vertical-line"></div>   
-                    <img class="s_imuga_i" src="img/logo.png">
+                    <img class="s_imuga_i" src="Img/logo.png">
                     </div>
                     <div class="vidstup-50px"> </div>
                 </div>
@@ -54,7 +54,7 @@
             <div class="whide-box">
                 <div class="tablet">
                     <h2>Також на нашому сервері ви зможете будувати велетенскі структуру, фабрики чи прості механізми. Творіть з модифікацією <span class="rainbow">Create</span>!</h2>
-                    <img class="s_imuga_c" src="img/create.png" alt="Image 1">
+                    <img class="s_imuga_c" src="Img/create.png" alt="Image 1">
                   </div>
               <div class="oak"></div>    
               <div class="gallery">
