--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="tablet_s"><img src="Img/server-icon.png" alt="Image 1"></div>
             <div class="prostor-10px"> </div>
         <ul class="button_list">
-            <button class="button_oak_ip" onclick="copyText(); playClickSound()"><h1>IP - адреса</h1></button>
+            <button class="button_oak_ip" onclick="copyText(); playClickSound()"><h1>IP - адреса</h1>копіює в буфер</button>
 <button class="button_oak" onclick="downloadArchive(); playClickSound()"><h1>Архів файлів</h1></button>
 <button class="button_oak" onclick="goToLink(); playClickSound()"><h1>Discord</h1></button>
 
