--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="prostor-10px"> </div>
         <ul class="button_list">
             <button class="button_oak_ip" onclick="copyText(); playClickSound()"><h1>IP - адреса</h1><label>копіює в буфер</label></button>
-<button class="button_oak" onclick="downloadArchive(); playClickSound()"><h1>Архів файлів</h1></button>
+<button class="button_oak" onclick="downloadArchive(); playClickSound()"><h1>ZIP файлів</h1></button>
 <button class="button_oak" onclick="goToLink(); playClickSound()"><h1>Discord</h1></button>
 
 <audio id="clickSound">
